--- a/lessons/lesson_002.html
+++ b/lessons/lesson_002.html
@@ -15,7 +15,7 @@
   </video>
 
   <audio controls>
-    <source src="../media/lesson_002.m4a" type="audio/mp4">
+    <source src="../media/lesson_002.m4a" type="audio/aac">
     Your browser does not support the audio tag.
   </audio>
 
