--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="lessons/lesson_001.html">Lesson 001</a></li>
     <li><a href="lessons/lesson_002.html">Lesson 002</a></li>
     <li><a href="lessons/lesson_003.html">Lesson 003</a></li>
+    <li><a href="lessons/lesson_003.html">Lesson 004</a></li>
   </ul>
 </body>
 </html>
