--- a/lessons/lesson_004.html
+++ b/lessons/lesson_004.html
@@ -15,7 +15,7 @@
   </video>
 
   <audio controls>
-    <source src="../media/lesson_004.mp3" type="audio/mpeg">
+    <source src="../media/lesson_004.m4a" type="audio/mp4">
     Your browser does not support the audio tag.
   </audio>
 
